# Internet-Money-Bitch

./: .gitignore  Main.java  PRODUCT_PLAN.md  PROJECT_DETAILS.md  README.md  ROADMAP.md
apps/admin/: README.md  app.js  index.html  package-lock.json  package.json  styles.css
apps/admin/app/: globals.css  layout.js  page.js
apps/admin/lib/: fallback-admin.js
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: admin.py  ads.py  auth.py  catalog.py  downloads.py  health.py  telegram.py  users.py
apps/api/app/core/: config.py  database.py  errors.py  security.py
apps/api/app/repositories/: admin.py  ads.py  catalog.py  downloads.py  platform_settings.py
apps/api/app/schemas/: admin.py  ads.py  catalog.py  downloads.py  platform_settings.py  responses.py  telegram.py
apps/api/tests/: test_admin.py  test_ads.py  test_catalog.py  test_downloads.py  test_health.py  test_telegram.py
apps/web/: README.md  app.js  index.html  package-lock.json  package.json  styles.css
apps/web/app/: globals.css  layout.js  page.js
apps/web/app/anime/: page.js
apps/web/components/: catalog-grid-page.js  catalog-sidebar.js  media-card-link.js  media-detail-page.js  site-header.js
apps/web/lib/: catalog-data.js  fallback-catalog.js  site-config.js  telegram-session.js
docs/api/: API_SPEC.md
docs/architecture/: README.md
docs/product/: README.md
supabase/: schema.sql  seed.sql
supabase/migrations/: 0001_initial_schema.sql  0002_platform_settings.sql
(+9 files in other folders)
